# VI

./: .clang-format  .gitignore  CMakeLists.txt  make.bat  tools.cmake
.github/workflows/: cmake.yml
Source/: VI.cpp  VI.h  utils.cpp  utils.h
Source/camera/: avfoundation.h  avfoundation.m  videoInput.cpp  videoInput.h
Source/video/: cap_ffmpeg.cpp  cap_ffmpeg_hw.hpp  cap_ffmpeg_impl.hpp  cap_ffmpeg_legacy_api.hpp  cap_interface.hpp  ffmpeg_codecs.hpp  precomp.hpp  videoio.hpp
Test/: GLContext.cpp  GLContext.h  context.cpp  context.h  device.cpp  device.h  driver.cpp  driver.h  main.cpp  window.cpp  window.h
